--- a/proyectom/prodesarrollo/templates/paginas/mensajes.html
+++ b/proyectom/prodesarrollo/templates/paginas/mensajes.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Mensajes - {{ request.user.username }}</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css?family=Grand+Hotel&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'myapp/css/inicio.css' %}">
 </head>
 <body class="bg-black text-white font-sans">
 
