--- a/proyectom/prodesarrollo/templates/paginas/editar_perfil.html
+++ b/proyectom/prodesarrollo/templates/paginas/editar_perfil.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Instagram+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Grand+Hotel&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'myapp/css/inicio.css' %}">
     <style>
         body {
             background-color: black;
             color: white;
-            font-family: 'Instagram Sans', sans-serif;
         }
         .sidebar-icon {
             width: 24px;
@@ -24,9 +25,9 @@
 <body class="bg-black">
     <div class="flex">
         <!-- Barra lateral -->
-        <nav class="fixed h-screen w-[244px] border-r border-zinc-800 px-3 py-2 flex flex-col gap-2">
+        <nav class="fixed h-screen w-[202px] border-r border-zinc-800 px-1 py-1 flex flex-col">
             <div class="py-4 mb-4">
-                <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo_dark.png/ff9b85b8b7cd.png" alt="Instagram" class="h-[29px]">
+                <span class="logo-font text-5xl text-white">Instapp</span>
             </div>
             
             <a href="{% url 'inicio' %}" class="flex items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800">
@@ -60,10 +61,21 @@
             </a>
 
             <a href="{% url 'perfil' user.username %}" class="flex items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800">
-                <img src="https://via.placeholder.com/24" alt="Perfil" class="w-6 h-6 rounded-full">
+                <img src="{{ sugerencia.usuario.profile.avatar.url|default:'/media/perfiles/perfil_default.jpg' }}" alt="Perfil" class="w-6 h-6 rounded-full">
                 <span>Perfil</span>
             </a>
         </nav>
+
+        <div class="max-w-xl mx-auto p-6 bg-blac rounded-xl shadow">
+            <h2 class="text-2xl font-bold mb-4">Editar Perfil</h2>
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">
+                    Guardar cambios
+                </button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
