--- a/proyectom/prodesarrollo/static/myapp/css/inicio.css
+++ b/proyectom/prodesarrollo/static/myapp/css/inicio.css
@@ -23,3 +23,29 @@ border: 2px solid #18181b;
 background-color: #71717a; /* Gris más claro al hacer hover */
 cursor: pointer;
 }
+
+.video-container {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  border-radius: 12px;
+  overflow: hidden;
+  background-color: black;
+}
+
+
+.controls {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px 10px;
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.controls input[type="range"] {
+  flex: 1;
+}
